WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286706
REGRESSION (
288901@main
): animation when finding non-theme word in Strands game shows artifacts
https://bugs.webkit.org/show_bug.cgi?id=286706
Summary
REGRESSION (288901@main): animation when finding non-theme word in Strands ga...
Matt Woodrow
Reported
2025-01-29 14:29:22 PST
<
rdar://143759652
>
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2025-01-29 14:55:01 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39722
EWS
Comment 2
2025-01-30 13:48:48 PST
Committed
289581@main
(5df28f0be2e1): <
https://commits.webkit.org/289581@main
> Reviewed commits have been landed. Closing PR #39722 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug