REGRESSION (288901@main): animation when finding non-theme word in Strands game shows artifacts. https://bugs.webkit.org/show_bug.cgi?id=286706 <rdar://143759652>

Reviewed by Simon Fraser.

If RenderLayerCompositor::layerStyleChanged changes the compositing status, it
updates the repaint rects on the layer and issues a repaint for the 'old'
position.  This needs to happen before the new transform is writen to the
RenderLayer, otherwise the repaint happens at the new position (in the old
layer). Move updateTransform down a bit to get the right ordering.

There's also a second issue where queryData.nonCompositedForPositionReason
doesn't get computed if the compositing checks returned early and set
reevaluateAfterLayout=true. This can cause toggling between values (from the
style change check, and the post-layout compositing layer update check), so only
check the values if they've been computed.

Adds a new test that catches both of these issues by checking the repaint rects
emitted.

* LayoutTests/fast/repaint/repaint-on-transform-change-expected.txt: Added.
* LayoutTests/fast/repaint/repaint-on-transform-change.html: Added.
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::calculateClipRects const):
* Source/WebCore/rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::updateBacking):

Canonical link: https://commits.webkit.org/289581@main